# search_engine

./: CMakeLists.txt  README.md  res.qrc
configurations_files/: config.json  requests.json
include/: InvertedIndex.h  SearchServer.h  convertorJSON.h
resources/: text1.txt  text2.txt  text3.txt
src/: CMakeLists.txt  InvertedIndex.cpp  SearchServer.cpp  convertorJSON.cpp  main.cpp
tests/: CMakeLists.txt  indexTest.cpp  serverTest.cpp
